--- a/src/app/shared/components/helpers/onboarding-stepper/onboarding-stepper.component.html
+++ b/src/app/shared/components/helpers/onboarding-stepper/onboarding-stepper.component.html
@@ -1,6 +1,6 @@
 <div class="stepper">
   <div class="stepper--header">
-    <p class="stepper--header-text align-center">
+    <p class="stepper--header-text align-center" data-cy="complete-steps-prompt">
       Complete the following steps to configure your Integration
     </p>
   </div>
