--- a/src/app/shared/components/mapping/mapping-filter/mapping-filter.component.html
+++ b/src/app/shared/components/mapping/mapping-filter/mapping-filter.component.html
@@ -1,4 +1,4 @@
-<div fxLayout="row" fxLayoutAlign="start center" class="mapping-filter--filters-section">
+<div fxLayout="row" fxLayoutAlign="start center" class="mapping-filter--filters-section" data-cy="mapping-filter">
   <div>
     <app-simple-text-search [form]="form" [page]="SimpleSearchPage.MAPPING" [searchType]="SimpleSearchType.TEXT_FIELD" [placeholder]="'Search ' + searchTerm" [showBackgroundColor]="false"></app-simple-text-search>
   </div>
