--- a/src/app/integration/main/main.component.html
+++ b/src/app/integration/main/main.component.html
@@ -1,7 +1,7 @@
 <app-header *ngIf="!isLoading"></app-header>
 
 <div *ngIf="!isLoading" fxLayout="row" fxLayoutAlign="start start">
-  <div class="side-nav-bar">
+  <div class="side-nav-bar" data-cy="side-nav-bar">
     <div fxLayout="row" class="navbar--logo-section side-nav-bar--logo-header-section">
       <div class="navbar--fyle-logo">
         <img alt="Fyle" src="assets/images/svgs/logo/fyle.svg" width="80px" height="30px"/>
@@ -18,9 +18,9 @@
         <div *ngIf="module.name === 'Mappings' || module.name === 'Configuration'" class="side-nav-bar--separator"></div>
         <div fxLayout="row">
           <div *ngIf="module.isActive && (!module.childPages.length || !module.isExpanded)" class="side-nav-bar--active-tag-module"></div>
-          <div fxLayout="row" [ngClass]="[module.childPages.length ? 'side-nav-bar--module-block-content-expandable' : 'side-nav-bar--module-block-content', module.isActive && (!module.childPages.length || !module.isExpanded) ? 'side-nav-bar--active-module-block' : '', module.isActive && (!module.childPages.length || !module.isExpanded) ? 'side-nav-bar--active-module-block-expandable' : '', module.name === 'Export Log' ? 'side-nav-bar--module-block-expandable-export-log' : '', module.name === 'Export Log' && module.isActive ? 'side-nav-bar--active-module-block-expandable-export-log' : '']">
+          <div fxLayout="row" data-cy="side-nav-bar-click" [ngClass]="[module.childPages.length ? 'side-nav-bar--module-block-content-expandable' : 'side-nav-bar--module-block-content', module.isActive && (!module.childPages.length || !module.isExpanded) ? 'side-nav-bar--active-module-block' : '', module.isActive && (!module.childPages.length || !module.isExpanded) ? 'side-nav-bar--active-module-block-expandable' : '', module.name === 'Export Log' ? 'side-nav-bar--module-block-expandable-export-log' : '', module.name === 'Export Log' && module.isActive ? 'side-nav-bar--active-module-block-expandable-export-log' : '']">
             <img [ngClass]="module.name === 'Export Log' ? 'side-nav-bar--export-icon' : 'side-nav-bar--icon'" src="{{ module.isActive ? module.iconPath + '-active.svg' :  module.iconPath + '.svg' }}">
-            <h4 class="side-nav-bar--module-block-text side-nav-bar--text-properties capitalize">{{ module.name }}</h4>
+            <h4 class="side-nav-bar--module-block-text side-nav-bar--text-properties capitalize" data-cy="mappings-text">{{ module.name }}</h4>
             <img *ngIf="module.childPages.length && !module.isActive" height="10px" width="18px"
               src='{{ "assets/images/svgs/actions/arrow-mark-" + (module.isExpanded ? "up" : "down") + ".svg"}}'>
             <img *ngIf="module.childPages.length && module.isActive" height="10px" width="18px"
@@ -34,7 +34,7 @@
             <div *ngIf="childPage.isActive && module.isExpanded" class="side-nav-bar--active-tag-module"></div>
             <div *ngIf="module.isExpanded" fxLayout="row" class="side-nav-bar--child-module-block-content side-nav-bar--module-block-content single-line-text pointer"
               [ngClass]="[childPage.isActive ? 'side-nav-bar--active-child': '', childPage.isActive ? 'side-nav-bar--active-module-text': '', childPage.isActive && module.isExpanded ? 'side-nav-bar--active-module-block' : '']" (click)="navigate(childPage)">
-              <h4 matTooltip="{{childPage.name | titlecase | snakeCaseToSpaceCase}}" [matTooltipDisabled]="childPage.name.length > 25 === false" matTooltipPosition="right" matTooltipClass="right" class="side-nav-bar--module-block-text-inner side-nav-bar--text-properties capitalize"> {{ childPage.name | titlecase | snakeCaseToSpaceCase }}</h4>
+              <h4 matTooltip="{{childPage.name | titlecase | snakeCaseToSpaceCase}}" [matTooltipDisabled]="childPage.name.length > 25 === false" matTooltipPosition="right" matTooltipClass="right" class="side-nav-bar--module-block-text-inner side-nav-bar--text-properties capitalize" data-cy="employee-mapping-text"> {{ childPage.name | titlecase | snakeCaseToSpaceCase }}</h4>
             </div>
           </div>
           <div *ngIf="module.isExpanded && module.name === 'Mappings' && module.childPages.length - 2 === i && module.childPages[i+1].name === 'Custom Mapping'" class="side-nav-bar--separator"></div>
