--- a/src/app/shared/components/helpers/simple-text-search/simple-text-search.component.html
+++ b/src/app/shared/components/helpers/simple-text-search/simple-text-search.component.html
@@ -1,12 +1,12 @@
 <!-- TODO: touched by default -->
 <!-- TODO: disable space search -->
 <div *ngIf="form" [formGroup]="form" [ngClass]="{'search-select': showBackgroundColor}">
-  <div class="search-select--search-input" [ngClass]="{'search-select--search-section': !showBackgroundColor}">
+  <div class="search-select--search-input" [ngClass]="{'search-select--search-section': !showBackgroundColor}" data-cy="search-element">
     <div fxLayout="row" class="search-select--search-area" [ngClass]="{'search-select--smaller-search-area': !showBackgroundColor}">
-      <img class="search-select--search-icon" src="assets/images/svgs/actions/search.svg">
+      <img class="search-select--search-icon" src="assets/images/svgs/actions/search.svg" data-cy="search-svg">
       <input class="search-select--input-field"
-        [placeholder]="placeholder" class="export-settings--search" formControlName="searchOption" cdkFocusInitial type="text" matInput>
-        <img *ngIf="form.value.searchOption" width="12px" height="12px" src="assets/images/svgs/actions/clear-search.svg" class="search-select--clear-icon pointer" [ngClass]="{'search-select--clear-icon-smaller-area': !showBackgroundColor}" (click)="clearText()">
+        [placeholder]="placeholder" class="export-settings--search" formControlName="searchOption" cdkFocusInitial type="text" matInput data-cy="search-input">
+        <img *ngIf="form.value.searchOption" width="12px" height="12px" src="assets/images/svgs/actions/clear-search.svg" class="search-select--clear-icon pointer" [ngClass]="{'search-select--clear-icon-smaller-area': !showBackgroundColor}" (click)="clearText()" data-cy="clear-icon-svg">
     </div>
   </div>
 </div>
