--- a/src/app/shared/components/mapping/mapping-table/mapping-table.component.html
+++ b/src/app/shared/components/mapping/mapping-table/mapping-table.component.html
@@ -11,7 +11,7 @@
 
   <ng-container matColumnDef="xero">
     <th mat-header-cell *matHeaderCellDef>
-      <h4>{{ this.destinationType | titlecase | snakeCaseToSpaceCase }} in Xero</h4>
+      <h4 data-cy="table-header-text">{{ this.destinationType | titlecase | snakeCaseToSpaceCase }} in Xero</h4>
     </th>
     <td mat-cell *matCellDef="let element">
       <mat-form-field floatLabel="always" appearance="outline" class="mapping-table--form-field">
@@ -31,11 +31,11 @@
 
   <ng-container matColumnDef="state">
     <th mat-header-cell *matHeaderCellDef>
-      <h4>State</h4>
+      <h4 data-cy="state-text">State</h4>
     </th>
     <td mat-cell *matCellDef="let element">
       <div class="mapping-table--state-pill" [ngClass]="element.state === 'MAPPED' ? 'mapping-table--state-pill-mapped' : 'mapping-table--state-pill-unmapped'">
-        <h4 class="mapping-table--state-pill-text align-center">{{ element.state | titlecase }}</h4>
+        <h4 class="mapping-table--state-pill-text align-center" data-cy="mapped-unmapped-pill-text">{{ element.state | titlecase }}</h4>
       </div>
     </td>
   </ng-container>
