--- a/src/app/shared/components/mapping/mapping-table/mapping-table.component.html
+++ b/src/app/shared/components/mapping/mapping-table/mapping-table.component.html
@@ -18,7 +18,7 @@
         <mat-select placeholder="Select {{ this.destinationType | titlecase | snakeCaseToSpaceCase }}" [value]="mappingForm[element.index]?.value?.destination" (closed)="helperService.clearSearchText(mappingForm[element.index])">
           <app-simple-text-search [form]="mappingForm[element.index]" [page]="SimpleSearchPage.MAPPING" [searchType]="SimpleSearchType.SELECT_FIELD"></app-simple-text-search>
 
-          <mat-option *ngFor="let option of xeroData | search : mappingForm[element.index].value.searchOption" [ngClass]="{'search-zero-state': option && option.value === 'No result found'}" [matTooltip]="option.value" [matTooltipDisabled]="option.value.length <= 40" matTooltipPosition="above" matTooltipClass="above" (click)="saveMapping(element, option, mappingForm[element.index]);" [value]="option.value">
+          <mat-option *ngFor="let option of xeroData | search : mappingForm[element.index].value.searchOption" data-cy="mapping-option" [ngClass]="{'search-zero-state': option && option.value === 'No result found'}" [matTooltip]="option.value" [matTooltipDisabled]="option.value.length <= 40" matTooltipPosition="above" matTooltipClass="above" (click)="saveMapping(element, option, mappingForm[element.index]);" [value]="option.value">
             <p (click)="$event.stopPropagation()" *ngIf="option.value === 'No result found'" class="align-center italic">{{ option.value }}</p>
             <p *ngIf="option.value !== 'No result found'">{{ option.value | trimCharacter: 38 }}</p>
             <img *ngIf="option.value === mappingForm[element.index].value.destination" src="assets/images/svgs/general/tick-pink.svg" class="selected-value-check-mark">
