simplify report closure

--- a/src/app/shared/components/configuration/export-settings/export-settings.component.html
+++ b/src/app/shared/components/configuration/export-settings/export-settings.component.html
@@ -97,7 +97,7 @@
 
           <app-configuration-select-field
             [form]="exportSettingsForm"
-            [options]="reimbursableExpenseStateOptions"
+            [options]="cccExpenseStateOptions"
             [isFieldMandatory]="true"
             [mandatoryErrorListName]="'CCC Expense State'"
             [iconPath]="'assets/images/svgs/actions/question-mark.svg'"
