--- a/src/app/integration/onboarding/onboarding-landing/onboarding-landing.component.html
+++ b/src/app/integration/onboarding/onboarding-landing/onboarding-landing.component.html
@@ -1,37 +1,37 @@
-<app-header></app-header>
+<app-header data-cy="app-header"></app-header>
 
-<div class="landing">
-  <div class="landing--bg-triangle-left"></div>
-  <div class="landing--bg-triangle-right"></div>
+<div class="landing" data-cy="landing-section">
+  <div class="landing--bg-triangle-left" data-cy="bg-triangle-left"></div>
+  <div class="landing--bg-triangle-right" data-cy="bg-triangle-right"></div>
   <div fxLayout="row" fxLayoutAlign="center center" class="landing--welcome-section">
     <div fxLayout="column" fxLayoutAlign="space-between center">
       <div class="landing--welcome-text">
-        <div class="landing--welcome-text-header align-center">
+        <div class="landing--welcome-text-header align-center" data-cy="welcome-text">
           Welcome to <b>Fyle + Xero</b> Integration
         </div>
-        <div class="landing--welcome-text-caption align-center sub-text-color paragraph">
+        <div class="landing--welcome-text-caption align-center sub-text-color paragraph" data-cy="landing-subheading-text">
           Save time and effort by automating the seamless transfer of data between Fyle and Xero for accurate accounting.
         </div>
       </div>
-      <div class="landing--xero-connect-section" (click)="connectXero()">
+      <div class="landing--xero-connect-section" (click)="connectXero()" data-cy="connect-to-xero-cta">
         <div fxLayout="row" fxLayoutAlign="center center" class="landing--xero-connect-button pointer">
           <img src="../../../../assets/images/svgs/actions/connect-blue.svg">
         </div>
       </div>
     </div>
   </div>
-  <div fxLayout="column" fxLayoutAlign="space-between center" class="landing--guide-section">
+  <div fxLayout="column" fxLayoutAlign="space-between center" class="landing--guide-section" data-cy="guide-section">
     <div class="landing--guide-text">
-        <h2 class="landing--guide-text-header align-center">
+        <h2 class="landing--guide-text-header align-center" data-cy="guide-to-setup-text">
           Guide to setup your Integrations
         </h2>
       <div>
-        <h3 class="landing--guide-text-caption align-center sub-text-color">
+        <h3 class="landing--guide-text-caption align-center sub-text-color" data-cy="video-tour-text">
           A quick video tour to help you set up your integration easily and fast.
         </h3>
       </div>
     </div>
-    <div>
+    <div data-cy="video-container">
       <iframe class="landing--guide-video" width="797" height="448" src="https://www.youtube.com/embed/IplJd7tGWBk" 
         title="Fyle Xero Integration" frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -39,20 +39,17 @@
     </div>
   </div>
 </div>
-
-
-<div class="landing--integration-data-flow-section">
+<div class="landing--integration-data-flow-section" data-cy="integration-data-flow-section">
   <div class="landing--integration-data-flow-text">
-    <h2 class="landing--integration-data-flow-text-header align-center">
+    <h2 class="landing--integration-data-flow-text-header align-center" data-cy="integration-data-flow-text-header">
       How does the integration work?
     </h2>
-    <h3 class="landing--integration-data-flow-text-caption align-center sub-text-color">
+    <h3 class="landing--integration-data-flow-text-caption align-center sub-text-color" data-cy="integration-data-flow-text-caption">
       Export expenses from Fyle and import chart of accounts, customers, and other data from Xero.
     </h3>
   </div>
   <div class="landing--integration-data-image-section">
-    <img src="assets/images/svgs/general/fyle-xero-data-flow.svg" class="landing--integration-data-image"/>
+    <img src="assets/images/svgs/general/fyle-xero-data-flow.svg" class="landing--integration-data-image" data-cy="integration-data-flow-image"/>
   </div>
 </div>
-
-<app-onboarding-footer></app-onboarding-footer>
+<app-onboarding-footer data-cy="onboarding-footer"></app-onboarding-footer>
