--- a/src/app/shared/components/helpers/onboarding-stepper/onboarding-stepper.component.html
+++ b/src/app/shared/components/helpers/onboarding-stepper/onboarding-stepper.component.html
@@ -1,23 +1,23 @@
-<div class="stepper">
-  <div class="stepper--header">
+<div class="stepper" data-cy="stepper">
+  <div class="stepper--header" data-cy="stepper-header">
     <p class="stepper--header-text align-center" data-cy="complete-steps-prompt">
       Complete the following steps to configure your Integration
     </p>
   </div>
 
-  <div fxLayout="row" fxLayoutAlign="center center" class="stepper--steps">
-    <div *ngFor="let onboardingStep of onboardingSteps">
+  <div fxLayout="row" fxLayoutAlign="center center" class="stepper--steps" data-cy="stepper-steps">
+    <div *ngFor="let onboardingStep of onboardingSteps" data-cy="onboarding-step">
       <div fxLayout="column">
         <div fxLayout="row">
-          <div fxLayout="row" fxLayoutAlign="space-between center" class="stepper--step" (click)="navigate(onboardingStep.completed, onboardingStep.route)" [ngClass]="[!onboardingStep.active && onboardingStep.completed ? 'stepper--step-completed pointer' : 'stepper--step-active cursor-disabled', !onboardingStep.active && !onboardingStep.completed ? 'stepper--step-inactive cursor-disabled' : '']">
-            <img *ngIf="onboardingStep.active" src='{{ "assets/images/svgs/stepper/" + onboardingStep.icon + ".svg" }}' class="stepper--icon" [height]="onboardingStep.size.height" [width]="onboardingStep.size.width">
-            <img *ngIf="!onboardingStep.active && onboardingStep.completed" src="assets/images/svgs/general/tick.svg" class="stepper--icon" width="20px" height="14px">
-            <img *ngIf="!onboardingStep.active && !onboardingStep.completed" src='{{ "assets/images/svgs/stepper/" + onboardingStep.icon + "-inactive.svg" }}' class="stepper--icon" [height]="onboardingStep.size.height" [width]="onboardingStep.size.width">
+          <div fxLayout="row" fxLayoutAlign="space-between center" class="stepper--step" (click)="navigate(onboardingStep.completed, onboardingStep.route)" [ngClass]="[!onboardingStep.active && onboardingStep.completed ? 'stepper--step-completed pointer' : 'stepper--step-active cursor-disabled', !onboardingStep.active && !onboardingStep.completed ? 'stepper--step-inactive cursor-disabled' : '']" data-cy="stepper-step">
+            <img *ngIf="onboardingStep.active" src='{{ "assets/images/svgs/stepper/" + onboardingStep.icon + ".svg" }}' class="stepper--icon" [height]="onboardingStep.size.height" [width]="onboardingStep.size.width" data-cy="step-active-icon">
+            <img *ngIf="!onboardingStep.active && onboardingStep.completed" src="assets/images/svgs/general/tick.svg" class="stepper--icon" width="20px" height="14px" data-cy="step-completed-icon">
+            <img *ngIf="!onboardingStep.active && !onboardingStep.completed" src='{{ "assets/images/svgs/stepper/" + onboardingStep.icon + "-inactive.svg" }}' class="stepper--icon" [height]="onboardingStep.size.height" [width]="onboardingStep.size.width" data-cy="step-inactive-icon">
           </div>
-          <div *ngIf="onboardingStep.step !== 'Advanced Settings'" [ngClass]="[!onboardingStep.active && onboardingStep.completed ? 'stepper--horizontal-separator-completed' : 'stepper--horizontal-separator', !onboardingStep.active && !onboardingStep.completed ? 'stepper--horizontal-separator' : '']"></div>
+          <div *ngIf="onboardingStep.step !== 'Advanced Settings'" [ngClass]="[!onboardingStep.active && onboardingStep.completed ? 'stepper--horizontal-separator-completed' : 'stepper--horizontal-separator', !onboardingStep.active && !onboardingStep.completed ? 'stepper--horizontal-separator' : '']" data-cy="stepper-horizontal-separator"></div>
         </div>
-        <div (click)="navigate(onboardingStep.completed, onboardingStep.route)" class="stepper--step-name" [ngClass]="[!onboardingStep.active && onboardingStep.completed ? 'pointer' : 'cursor-disabled', !onboardingStep.active && !onboardingStep.completed ? 'sub-text-color cursor-disabled' : '']">
-          <h5 [ngClass]="{'stepper--step-1-2-text': onboardingStep.number === 1 || onboardingStep.number === 2, 'stepper--step-3-4-text': onboardingStep.number === 3 || onboardingStep.number === 4, 'stepper--step-5-text': onboardingStep.number === 5}">{{onboardingStep.step}}</h5>
+        <div (click)="navigate(onboardingStep.completed, onboardingStep.route)" class="stepper--step-name" [ngClass]="[!onboardingStep.active && onboardingStep.completed ? 'pointer' : 'cursor-disabled', !onboardingStep.active && !onboardingStep.completed ? 'sub-text-color cursor-disabled' : '']" data-cy="stepper-step-name">
+          <h5 [ngClass]="{'stepper--step-1-2-text': onboardingStep.number === 1 || onboardingStep.number === 2, 'stepper--step-3-4-text': onboardingStep.number === 3 || onboardingStep.number === 4, 'stepper--step-5-text': onboardingStep.number === 5}" data-cy="step-number">{{onboardingStep.step}}</h5>
         </div>
       </div>
     </div>
