--- a/src/app/shared/components/configuration/advanced-settings/add-email-dialog/add-email-dialog.component.html
+++ b/src/app/shared/components/configuration/advanced-settings/add-email-dialog/add-email-dialog.component.html
@@ -1,19 +1,19 @@
-<div>
+<div data-cy="add-email-dialog">
   <div fxLayout="row" class="add-email-dialog--header-section">
-    <h3 class="add-email-dialog--header-text single-line-text">
+    <h3 class="add-email-dialog--header-text single-line-text" data-cy="add-email-dialog-header-text">
       Add new Email Address
     </h3>
     <img src="assets/images/svgs/actions/close.svg" mat-dialog-close
-      class="add-email-dialog--close-icon sub-text-color pointer" />
+      class="add-email-dialog--close-icon sub-text-color pointer" data-cy="add-email-dialog-close-icon" />
   </div>
 
   <div class="add-email-dialog--horizontal-separator"></div>
 
-  <div class="add-email-dialog--admin-info">
+  <div class="add-email-dialog--admin-info" data-cy="add-email-dialog-admin-info">
     Add an email address on which you would like to receive your Integration notification mails.
   </div>
 
-  <form [formGroup]="form">
+  <form [formGroup]="form" data-cy="add-email-dialog-form">
     <div>
       <h5 class="add-email-dialog--name-text sub-text-color">
         Name
@@ -21,9 +21,9 @@
       </h5>
       <div class="add-email-dialog--form-field">
         <input class="add-email-dialog--form-input" type="text" formControlName="adminName" placeholder="Enter Name"
-          matInput>
+          matInput data-cy="add-email-dialog-form-name-input">
         <app-mandatory-error-message *ngIf="form.controls.adminName.touched && !form.controls.adminName.valid"
-          [customErrorMessage]="'Please enter a name'"></app-mandatory-error-message>
+          [customErrorMessage]="'Please enter a name'" data-cy="add-email-dialog-form-name-error"></app-mandatory-error-message>
       </div>
     </div>
 
@@ -34,18 +34,18 @@
       </h5>
       <div class="add-email-dialog--form-field">
         <input class="add-email-dialog--form-input" type="text" formControlName="adminEmail"
-          placeholder="Type email address here (ex- john@acme.com)" matInput>
+          placeholder="Type email address here (ex- john@acme.com)" matInput data-cy="add-email-dialog-form-email-input">
         <app-mandatory-error-message *ngIf="form.controls.adminEmail.touched && !form.controls.adminEmail.valid"
-          [customErrorMessage]="'Please enter a valid email address'"></app-mandatory-error-message>
+          [customErrorMessage]="'Please enter a valid email address'" data-cy="add-email-dialog-form-email-error"></app-mandatory-error-message>
       </div>
     </div>
 
     <div fxLayout="row" fxLayoutAlign="end center" class="add-email-dialog--btn-section">
       <div class="add-email-dialog--cancel-btn">
-        <a mat-stroked-button mat-dialog-close class="add-email-dialog--cancel-btn-text">Cancel</a>
+        <a mat-stroked-button mat-dialog-close class="add-email-dialog--cancel-btn-text" data-cy="add-email-dialog-cancel-btn">Cancel</a>
       </div>
       <button [disabled]="!form.valid" mat-flat-button color="accent" (click)="submit()" mat-flat-button color="primary"
-        [ngClass]="{'add-email-dialog--cta-btn': form.valid}">Save</button>
+        [ngClass]="{'add-email-dialog--cta-btn': form.valid}" data-cy="add-email-dialog-save-btn">Save</button>
     </div>
   </form>
 </div>
