--- a/src/app/shared/components/configuration/advanced-settings/advanced-settings.component.html
+++ b/src/app/shared/components/configuration/advanced-settings/advanced-settings.component.html
@@ -1,18 +1,18 @@
 <div fxLayout="row" fxLayoutAlign="center center" class="advanced-settings configuration--section"
-  [ngClass]="[isOnboarding ? 'configuration--onboarding-section' : '', !isOnboarding ? 'configuration--post-onboarding-section': '']">
-  <app-loader [ngClass]="{'loader-main': !isOnboarding}" [phase]="'pre_onboarding'" *ngIf="isLoading"></app-loader>
-  <div *ngIf="!isLoading" class="configuration--contents">
+  [ngClass]="[isOnboarding ? 'configuration--onboarding-section' : '', !isOnboarding ? 'configuration--post-onboarding-section': '']" data-cy="advanced-settings-section">
+  <app-loader [ngClass]="{'loader-main': !isOnboarding}" [phase]="'pre_onboarding'" *ngIf="isLoading" data-cy="advanced-settings-loader"></app-loader>
+  <div *ngIf="!isLoading" class="configuration--contents" data-cy="advanced-settings-contents">
     <app-configuration-step-header-section [showSyncButton]="isOnboarding"
-      [phase]="isOnboarding ? ProgressPhase.ONBOARDING : ProgressPhase.POST_ONBOARDING">
+      [phase]="isOnboarding ? ProgressPhase.ONBOARDING : ProgressPhase.POST_ONBOARDING" data-cy="advanced-settings-step-header-section">
     </app-configuration-step-header-section>
-    <form [formGroup]="advancedSettingsForm">
+    <form [formGroup]="advancedSettingsForm" data-cy="advanced-settings-form">
 
       <app-configuration-select-field [form]="advancedSettingsForm"
         [options]="paymentSyncOptions" [iconPath]="'assets/images/svgs/actions/sync.svg'"
         [label]="'Auto - Sync payment between Fyle and Xero'"
         [subLabel]="'When an expense is marked as \'Paid\' in Fyle the corresponding transaction will automatically be updated to \'Paid\' in Xero and vice versa.'"
         [placeholder]="'Select how payments should be synced for reimbursable expenses'"
-        [formControllerName]="'paymentSync'">
+        [formControllerName]="'paymentSync'" data-cy="payment-sync-select-field">
       </app-configuration-select-field>
       
       <div *ngIf="advancedSettingsForm.value.paymentSync && advancedSettingsForm.value.paymentSync === 'fyle_to_xero'">
@@ -20,14 +20,14 @@
           [isFieldMandatory]="true" [mandatoryErrorListName]="'payment account'"
           [label]="'To which Payment account should the payment entries be posted?'"
           [subLabel]="'Once the payment for the reimbursable expense is complete in Fyle, the payment entries will be posted to the selected Payment account in Xero.'"
-          [placeholder]="'Select a Payment Account'" [formControllerName]="'billPaymentAccount'">
+          [placeholder]="'Select a Payment Account'" [formControllerName]="'billPaymentAccount'" data-cy="bill-payment-account-select-field">
         </app-configuration-select-field>
       </div>
 
       <app-configuration-toggle-field [form]="advancedSettingsForm"
         [iconPath]="'assets/images/svgs/general/calendar.svg'" [label]="'Schedule automatic export'"
         [subLabel]="'Set up a schedule to automate the export of expenses from Fyle to Xero'"
-        [formControllerName]="'exportSchedule'">
+        [formControllerName]="'exportSchedule'" data-cy="export-schedule-toggle-field">
       </app-configuration-toggle-field>
       <div *ngIf="advancedSettingsForm.value.exportSchedule">
         <app-configuration-select-field [form]="advancedSettingsForm" [options]="frequencyIntervals"
@@ -79,10 +79,10 @@
       <app-configuration-step-footer-section
         [ctaText]="!saveInProgress ? (isOnboarding ? ConfigurationCtaText.SAVE_AND_CONTINUE : ConfigurationCtaText.SAVE) : ConfigurationCtaText.SAVING"
         [showBackButton]="isOnboarding" [isButtonDisabled]="!advancedSettingsForm.valid || saveInProgress"
-        (navigateToPreviousStep)="navigateToPreviousStep()" (save)="save()"></app-configuration-step-footer-section>
+        (navigateToPreviousStep)="navigateToPreviousStep()" (save)="save()" data-cy="advanced-settings-step-footer-section"></app-configuration-step-footer-section>
 
     </form>
   </div>
 </div>
 
-<app-onboarding-footer *ngIf="isOnboarding && !isLoading"></app-onboarding-footer>
+<app-onboarding-footer *ngIf="isOnboarding && !isLoading" data-cy="onboarding-footer"></app-onboarding-footer>
