--- a/src/app/shared/components/configuration/export-settings/export-settings.component.html
+++ b/src/app/shared/components/configuration/export-settings/export-settings.component.html
@@ -112,7 +112,14 @@
           </app-configuration-select-field>
       </div>
 
-      <app-configuration-step-footer-section [ctaText]="!saveInProgress ? (isOnboarding ? ConfigurationCtaText.SAVE_AND_CONTINUE : ConfigurationCtaText.SAVE) : ConfigurationCtaText.SAVING" [showBackButton]="isOnboarding" [isButtonDisabled]="!exportSettingsForm.valid || saveInProgress" (navigateToPreviousStep)="navigateToPreviousStep()" (save)="save()"></app-configuration-step-footer-section>
+        <app-configuration-step-footer-section
+            data-cy="configuration-step-footer-section"
+            [ctaText]="!saveInProgress ? (isOnboarding ? ConfigurationCtaText.SAVE_AND_CONTINUE : ConfigurationCtaText.SAVE) : ConfigurationCtaText.SAVING"
+            [showBackButton]="isOnboarding"
+            [isButtonDisabled]="!exportSettingsForm.valid || saveInProgress"
+            (navigateToPreviousStep)="navigateToPreviousStep()"
+            (save)="save()">
+        </app-configuration-step-footer-section>
     </form>
   </div>
 </div>
