xero-journey - onboarding/export - data attribute (#45)
* xero-journey initial commit -1

* only data attribute no assertion in this PR

* data attribute for connect to xero page

* updated setup_env for xeroJourney

* launch integration

* data-cy attributes landing pages

* step-header-data-cy

* onboarding-stepper

* footer-data-cy

* for paginator

* add-email-dialog

* data-cy attributes

* advanced-settings-data-cy

* save-btn

--- a/src/app/shared/components/core/header/header.component.html
+++ b/src/app/shared/components/core/header/header.component.html
@@ -24,7 +24,7 @@
       </div>
     </div>
     <div fxLayout="row" #menu>
-      <div (click)="showOrHideProfileDropdown()" class="navbar--avatar-section pointer">
+      <div (click)="showOrHideProfileDropdown()" class="navbar--avatar-section pointer" data-cy="avatar">
         <p class="navbar--avatar-text align-center">
           {{user.full_name[0]}}
         </p>
