--- a/src/app/shared/components/configuration/configuration-step-header-section/configuration-step-header-section.component.html
+++ b/src/app/shared/components/configuration/configuration-step-header-section/configuration-step-header-section.component.html
@@ -1,23 +1,23 @@
-<div class="header-section">
+<div class="header-section" data-cy="header-section">
   <div fxLayout="row" fxLayoutAlign="space-between start" class="header-section--inner" [ngClass]="{'header-section--sync-inactive': !(showSyncButton && (activePage === 'export_settings' || activePage === 'import_settings' || activePage === 'advanced_settings'))}">
     <div>
-      <h3 class="header-section--header-text single-line-text">
+      <h3 class="header-section--header-text single-line-text" data-cy="connect-to-xero-tenant-text">
         {{ headerText }} <span *ngIf="isStepOptional" class="sub-text-color italic">(Optional)</span>
       </h3>
-      <h5 class="sub-text-color paragraph">
-        {{ contentText }} <span class="header-section--learn-more-btn pointer" (click)="helperService.openExternalLink(helpArticleLink)">Learn more<img class="help--open-in-new-tab-icon" src="assets/images/svgs/actions/open-in-new-tab-help.svg" width="10px" height="10px"/></span>
+      <h5 class="sub-text-color paragraph" data-cy="header-sub-text">
+        {{ contentText }} <span class="header-section--learn-more-btn pointer" (click)="helperService.openExternalLink(helpArticleLink)" data-cy="learn-more-btn">Learn more<img class="help--open-in-new-tab-icon" src="assets/images/svgs/actions/open-in-new-tab-help.svg" width="10px" height="10px"/></span>
       </h5>
       <div *ngIf="activePage === 'import_settings'" class="header-section--info-section">
-        <div fxLayout="row" class="header-section--info-content-section">
+        <div fxLayout="row" class="header-section--info-content-section" data-cy="import-settings-info-section">
           <img src="assets/images/svgs/general/info.svg" class="header-section--info-icon" width="16px" height="16px" />
-          <h5 class="sub-text-color">
+          <h5 class="sub-text-color" data-cy="import-settings-info-content">
             Enabling an Import of a dimension will sync all the data from the selected dimension with the expense fields in Fyle. If you don't want to import all the data and only use specific data in Fyle, we recommend that you create these fields first in Fyle and then selectively map them from the <b>Dashboard > Mappings</b> section once the setup is complete.
           </h5>
         </div>
       </div>
     </div>
     <div class="header-section--sync-btn" *ngIf="showSyncButton && (activePage === 'export_settings' || activePage === 'import_settings' || activePage === 'advanced_settings')">
-      <div fxLayout="row" fxLayoutAlign="space-between center" class="configuration--back-btn pointer" (click)="refreshXeroDimensions()" matTooltip="Instantly refresh and sync the dimensions from Xero and Fyle" matTooltipPosition="above" matTooltipClass="above">
+      <div fxLayout="row" fxLayoutAlign="space-between center" class="configuration--back-btn pointer" (click)="refreshXeroDimensions()" matTooltip="Instantly refresh and sync the dimensions from Xero and Fyle" matTooltipPosition="above" matTooltipClass="above" data-cy="sync-btn">
         <img src="assets/images/svgs/actions/sync.svg" class="btn-cta-text-with-icon" />
         <h5 class="btn-icon align-center">Sync</h5>
       </div>
