journey,resolve errors and export done

--- a/src/app/integration/main/dashboard/dashboard.component.html
+++ b/src/app/integration/main/dashboard/dashboard.component.html
@@ -19,7 +19,7 @@
               <div class="export--info-text paragraph">
                 <h5 *ngIf="!exportInProgress && !exportableExpenseGroupIds.length">No new Transaction to export from the {{ importState | titlecase | snakeCaseToSpaceCase }} state in Fyle.</h5>
                 <h5 *ngIf="!exportInProgress && !exportableExpenseGroupIds.length">Once you start processing payment for the expenses, they will be automatically available here to export.</h5>
-                <h5 *ngIf="!exportInProgress && exportableExpenseGroupIds.length">Click on <b>Export</b> to start exporting expenses from Fyle as Xero transactions.</h5>
+                <h5 *ngIf="!exportInProgress && exportableExpenseGroupIds.length" data-cy="export-prompt">Click on <b>Export</b> to start exporting expenses from Fyle as Xero transactions.</h5>
                 <h5 *ngIf="exportInProgress" class="export--in-process">This may take a few minutes. Please wait...</h5>
                 <div *ngIf="!exportInProgress && failedExpenseGroupCount !== null && failedExpenseGroupCount > 0" fxLayout="row">
                   <h5>{{ exportableExpenseGroupIds.length - failedExpenseGroupCount > 0 ? exportableExpenseGroupIds.length - failedExpenseGroupCount : 0 }} new Transaction{{(exportableExpenseGroupIds.length - failedExpenseGroupCount) > 1 ? 's' : ''}}, {{ failedExpenseGroupCount }} previously failed Transaction{{failedExpenseGroupCount > 1 ? 's' : ''}}</h5>
@@ -28,7 +28,7 @@
               </div>
             </div>
           </div>
-          <div fxLayout="row" fxLayoutAlign="space-between center" class="pointer configuration--submit-btn" [ngClass]="!exportableExpenseGroupIds.length || exportInProgress ? 'btn-disabled' : 'btn-enabled'" (click)="export()">
+          <div fxLayout="row" fxLayoutAlign="space-between center" class="pointer configuration--submit-btn" [ngClass]="!exportableExpenseGroupIds.length || exportInProgress ? 'btn-disabled' : 'btn-enabled'" (click)="export()" data-cy="export-btn">
             <h5 class="btn-cta-text-with-icon single-line-text">
               {{ exportInProgress ? 'Exporting' : 'Export' }}
             </h5>
