--- a/src/app/shared/components/configuration/configuration-toggle-field/configuration-toggle-field.component.html
+++ b/src/app/shared/components/configuration/configuration-toggle-field/configuration-toggle-field.component.html
@@ -6,7 +6,7 @@
       <h5 class="configuration--field-label sub-text-color paragraph" [innerHTML]="subLabel"></h5>
     </div>
   </div>
-  <div class="configuration--input-toggle-section">
+  <div class="configuration--input-toggle-section" data-cy="toggle-field">
     <mat-slide-toggle class="configuration--toggle-form-field" color="accent" [formControlName]="formControllerName">
     </mat-slide-toggle>
   </div>
