--- a/src/app/shared/components/configuration/export-settings/export-settings.component.html
+++ b/src/app/shared/components/configuration/export-settings/export-settings.component.html
@@ -70,6 +70,7 @@
         [label]="'Export Corporate Card Expenses'"
         [subLabel]="'Enable this to export the corporate card expenses from Fyle. If not enabled, any expenses <span class=bold>Paid by Corporate Card</span> will not be exported to Xero.'"
         [formControllerName]="'creditCardExpense'"
+        data-cy="corporate-credit-card-expense-toggle"
       >
       </app-configuration-toggle-field>
 
