--- a/src/app/integration/onboarding/onboarding-done/onboarding-done.component.html
+++ b/src/app/integration/onboarding/onboarding-done/onboarding-done.component.html
@@ -7,7 +7,7 @@
         height="150px">
     </div>
     <div class="onboarding-done--header">
-      <h3 class="align-center">Congratulations! Your integration setup is now complete.</h3>
+      <h3 class="align-center" data-cy="completion-prompt">Congratulations! Your integration setup is now complete.</h3>
     </div>
     <div fxLayout="row" fxLayoutAlign="center center">
       <div fxLayout="row" fxLayoutAlign="space-between center" class="configuration--submit-btn btn-enabled" (click)="navigateToDashboard()">
