--- a/src/app/shared/components/dashboard/dashboard-resolve-mapping-error-dialog/dashboard-resolve-mapping-error-dialog.component.html
+++ b/src/app/shared/components/dashboard/dashboard-resolve-mapping-error-dialog/dashboard-resolve-mapping-error-dialog.component.html
@@ -48,7 +48,7 @@
         <h4 class="dashboard-resolve-mapping-dialog--row-heading-xero">{{ data.destinationType | titlecase | snakeCaseToSpaceCase }} in Xero</h4>
       </th>
       <td mat-cell *matCellDef="let element">
-        <mat-form-field floatLabel="always" appearance="outline" class="dashboard-resolve-mapping-dialog--form-field">
+        <mat-form-field floatLabel="always" appearance="outline" class="dashboard-resolve-mapping-dialog--form-field" data-cy="resolve-form-field">
           <mat-select placeholder="Select {{ data.destinationType | titlecase | snakeCaseToSpaceCase }}" [value]="mappingForm[element.index].value.destination" (closed)="helperService.clearSearchText(mappingForm[element.index])">
             <app-simple-text-search [form]="mappingForm[element.index]" [page]="SimpleSearchPage.DASHBOARD" [searchType]="SimpleSearchType.SELECT_FIELD"></app-simple-text-search>
 
