--- a/src/app/shared/components/dashboard/dashboard-resolve-mapping-error-dialog/dashboard-resolve-mapping-error-dialog.component.html
+++ b/src/app/shared/components/dashboard/dashboard-resolve-mapping-error-dialog/dashboard-resolve-mapping-error-dialog.component.html
@@ -5,7 +5,7 @@
         {{ data.sourceType | titlecase }} Mapping Errors
       </h3>
       <img src="assets/images/svgs/actions/close.svg" (click)="this.dialogRef.close()"
-        class="dashboard-resolve-mapping-dialog--close-icon sub-text-color pointer" />
+        class="dashboard-resolve-mapping-dialog--close-icon sub-text-color pointer" data-cy="close-resolve-dialog"/>
     </div>
     <h5 class="dashboard-resolve-mapping-dialog--sub-header-text sub-text-color">Resolve the following mapping errors to export your failed expenses successully to Xero </h5>
   </div>
