--- a/src/app/shared/components/mapping/mapping-table/mapping-table.component.html
+++ b/src/app/shared/components/mapping/mapping-table/mapping-table.component.html
@@ -14,7 +14,7 @@
       <h4 data-cy="table-header-text">{{ this.destinationType | titlecase | snakeCaseToSpaceCase }} in Xero</h4>
     </th>
     <td mat-cell *matCellDef="let element">
-      <mat-form-field floatLabel="always" appearance="outline" class="mapping-table--form-field">
+      <mat-form-field floatLabel="always" appearance="outline" class="mapping-table--form-field" data-cy="mapping-field-option">
         <mat-select placeholder="Select {{ this.destinationType | titlecase | snakeCaseToSpaceCase }}" [value]="mappingForm[element.index]?.value?.destination" (closed)="helperService.clearSearchText(mappingForm[element.index])">
           <app-simple-text-search [form]="mappingForm[element.index]" [page]="SimpleSearchPage.MAPPING" [searchType]="SimpleSearchType.SELECT_FIELD"></app-simple-text-search>
 
