--- a/src/app/shared/components/export-log/export-log-table/export-log-table.component.html
+++ b/src/app/shared/components/export-log/export-log-table/export-log-table.component.html
@@ -1,7 +1,7 @@
 <table mat-table [dataSource]="expenseGroups">
   <ng-container *ngIf="displayedColumns.indexOf('exportedAt') !== -1" matColumnDef="exportedAt">
     <th mat-header-cell *matHeaderCellDef>
-      <h4>Date and Time of Export</h4>
+      <h4 data-cy="date-time-text">Date and Time of Export</h4>
     </th>
     <td [ngClass]="{'pointer': element.fyleReferenceType !== FyleReferenceType.EXPENSE}" (click)="openChildExpenses(element)" mat-cell *matCellDef="let element">
       <h4>
@@ -16,7 +16,7 @@
 
   <ng-container matColumnDef="name">
     <th mat-header-cell *matHeaderCellDef>
-      <h4>Employee Name and ID</h4>
+      <h4 data-cy="employee-text">Employee Name and ID</h4>
     </th>
     <td [ngClass]="{'pointer': element.fyleReferenceType !== FyleReferenceType.EXPENSE && allowChildViewing}" (click)="openChildExpenses(element)" mat-cell *matCellDef="let element">
       <h4>
@@ -30,28 +30,28 @@
 
   <ng-container *ngIf="displayedColumns.indexOf('fundSource') !== -1" matColumnDef="exportedAt" matColumnDef="fundSource">
     <th mat-header-cell *matHeaderCellDef>
-      <h4>Expense Type</h4>
+      <h4 data-cy="expense-text">Expense Type</h4>
     </th>
     <td [ngClass]="{'pointer': element.fyleReferenceType !== FyleReferenceType.EXPENSE && allowChildViewing}" (click)="openChildExpenses(element)" mat-cell *matCellDef="let element"> {{element.expenseType}} </td>
   </ng-container>
 
   <ng-container matColumnDef="referenceID">
     <th mat-header-cell *matHeaderCellDef>
-      <h4>Reference ID</h4>
+      <h4 data-cy="ref-id-text">Reference ID</h4>
     </th>
     <td class="export-log-table--reference-id pointer" [matTooltip]="'View in Fyle'" matTooltipClass="below export-log-tooltip" mat-cell *matCellDef="let element" (click)="helperService.openExternalLink(element.fyleUrl)"> {{element.referenceNumber}} </td>
   </ng-container>
 
   <ng-container *ngIf="displayedColumns.indexOf('exportType') !== -1" matColumnDef="exportedAt" matColumnDef="exportType">
     <th mat-header-cell *matHeaderCellDef>
-      <h4>Exported to Xero as</h4>
+      <h4 data-cy="exported-xero-text">Exported to Xero as</h4>
     </th>
     <td [ngClass]="{'pointer': element.fyleReferenceType !== FyleReferenceType.EXPENSE && allowChildViewing}" (click)="openChildExpenses(element)" mat-cell *matCellDef="let element"> {{element.exportedAs | titlecase}} </td>
   </ng-container>
 
   <ng-container matColumnDef="link">
     <th mat-header-cell *matHeaderCellDef>
-      <h4>Link to {{externalUrlType}}</h4>
+      <h4 data-cy="link-to-text">Link to {{externalUrlType}}</h4>
     </th>
     <td mat-cell *matCellDef="let element" class="export-log-table--open-in-xero">
       <img class="pointer" src="assets/images/svgs/actions/open-in-new-tab.svg" (click)="helperService.openExternalLink(externalUrlType === 'Xero' ? element.xeroUrl : element.fyleUrl)"/>
@@ -59,5 +59,5 @@
   </ng-container>
 
   <tr class="export-log-table--heading" mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-  <tr class="export-log-table--row" mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  <tr class="export-log-table--row" mat-row *matRowDef="let row; columns: displayedColumns;" data-cy="export-data-row"></tr>
 </table>
